<resources>
    <!--App name-->
    <string name="app_name">One day in Prague</string>
    <string name="app_name2">discover Prague, solve a cipher</string>
    <string name="intro">Discover the beauty of the city of 100 towers and magical athmosphere. Every place can give you a key for a secret cipher.</string>

    <string name="user_name">write your name</string>
    <string name="start">Adventurous journey starts now!</string>

    <!--Cipher hint-->
    <string name="let1">P</string>
    <string name="let2">R</string>
    <string name="let3">A</string>
    <string name="let4">G</string>
    <string name="let5">U</string>
    <string name="let6">E</string>

    <!--Cipher -->
    <string name="cilet1">V</string>
    <string name="cilet2">L</string>
    <string name="cilet3">T</string>
    <string name="cilet4">A</string>
    <string name="cilet5">V</string>
    <string name="cilet6">A</string>

    <!--Question 1-->
    <!--Place 1-->
    <string name="question_1_place">1. Wenceslas Square</string>

    <!--Description + must visit 1-->
    <string name="question_1_description">The trip starts at Prague cultural, social and commercial center.</string>
    <string name="question_1_visit"><b>Visit:</b> National Museum, St. Wenceslas Statue, Lucerna Palace.</string>

    <!--Quiz question 1-->
    <string name="question_1">Key: What are the names of Czech patrons on the St. Wenceslas Statue?</string>
    <string name="question_1_ans_1">Wenceslas, Agnes, John of Nepomuk</string>
    <string name="question_1_ans_2">Wenceslas, Cyril, Methodius, Vitus, Adalbert</string>
    <string name="question_1_ans_3">Wenceslas, Peter, Pavel</string>
    <string name="question_1_ans_4">Ludmila, Agnes, Prokop, Adalbert</string>
    <!--Next stop 1-->
    <string name="direction1">From the bottom part of Wenceslas Square go down through the street Na Můstku to the next point.</string>

    <!--Question 2-->
    <!--Place 2-->
    <string name="question_2_place">2. Old Town Square</string>

    <!--Description + must visit 2-->
    <string name="question_2_description">The historical center of Prague.</string>
    <string name="question_2_visit"><b>Visit:</b>  Old-town town-hall, Astronomical Clock, Church of Our Lady before Týn, St. Nicholas\' Church, Kinský Palace, Jan Hus Memorial.</string>

    <!--Quiz question 2-->
    <string name="question_2">Key: How often can you see apostles in the windows of the Astronomical Clock?</string>
    <string name="question_2_ans_1">Every hour</string>
    <string name="question_2_ans_2">Every day at the noon</string>
    <string name="question_2_ans_3">Every day at 6, 12, 18 and 24 hour</string>
    <string name="question_2_ans_4">Only on New Year</string>

    <!--Next stop 2-->
    <string name="direction2">From the Astronomical Clock go to the Malé  náměstí and then through the Karlova street and follow the directions to the next point.</string>

    <!--Question 3-->
    <!--Place 3-->
    <string name="question_3_place">3. Charles Bridge</string>

    <!--Description + must visit 3-->
    <string name="question_3_description">The second oldest bridge in the Czech Republic from 1357. The most known among 30 Prague bridges with 30 amazing statues.</string>
    <string name="question_3_visit"><b>Visit:</b> Old Town Bridge Tower, Lesser Town Bridge Towers and take a look at bridge statues.</string>

    <!--Quiz question 3-->
    <string name="question_3">Key: How many pillars does Charles Bridge have?</string>
    <string name="question_3_ans_1">12</string>
    <string name="question_3_ans_2">13</string>
    <string name="question_3_ans_3">15</string>
    <string name="question_3_ans_4">16</string>

    <!--Next stop 3-->
    <string name="direction3">On the right side you can see the next point - Prague Castle. Follow the directiones to the next point.</string>
    <string name="edt_answ">write your answer</string>

    <!--Question 4-->
    <!--Place 4-->
    <string name="question_4_place">4. Prague Castle</string>

    <!--Description + must visit 4-->
    <string name="question_4_description">The biggest old castle in the world with area of 7.28 ha, where the president resides.</string>
    <string name="question_4_visit"><b>Visit:</b> St. Vitus Cathedral, Old Royal Palace, Golden Lane, Powder Tower, gardens and changing of the Castle Guards every hour.</string>

    <!--Quiz question 4-->
    <string name="question_4">Key: The construction of St. Vitus Cathedral started in 1344. When was it finished?</string>
    <string name="question_4_ans_1">1929</string>
    <string name="question_4_ans_2">1561</string>
    <string name="question_4_ans_3">1770</string>
    <string name="question_4_ans_4">1385</string>

    <!--Next stop 4-->
    <string name="direction4">Return to Charles Bridge and go down to the Kampa Island.</string>

    <!--Question 5-->
    <!--Place 5-->
    <string name="question_5_place">5. Kampa Island</string>

    <!--Description + must visit 5-->
    <string name="question_5_description">Prague Venice, the second most beautiful city island of the world.</string>
    <string name="question_5_visit"><b>Visit:</b> Čertovka (Devil\'s Channel), Werich Villa, Sova\'s Mills (Museum Kampa), Babies.</string>

    <!--Quiz question 5-->
    <string name="question_5">Key: After which famous person is named a wall near to the Kampa Island?</string>
    <string name="question_5_ans_1">W. A. Mozart</string>
    <string name="question_5_ans_2">John Lennon</string>
    <string name="question_5_ans_3">king Karel IV.</string>
    <string name="question_5_ans_4">Albert Einstein</string>

    <!--Next stop 5-->
    <string name="direction5">"At the end of the island go to Legie Bride to the last point. "</string>

    <!--Question 6-->
    <!--Place 6-->
    <string name="question_6_place">6. Slavia Café</string>

    <!--Description + must visit 6-->
    <string name="question_6_description">Our journey ends across from the National Theater in the well-known café, which will give you the last key to the cipher.</string>
    <string name="question_6_visit"><b>Visit:</b> Have a cup of great coffee with strudel and from a window you can remember the beautiful places you have visited.</string>

    <!--Quiz question 6-->
    <string name="question_6">Key: Which famous people have visited Slavia Café?</string>
    <string name="question_6_ans_1">president Václav Havel</string>
    <string name="question_6_ans_2">Hillary Clinton</string>
    <string name="question_6_ans_3">Franz Kafka</string>
    <string name="question_6_ans_4">J. W. Goethe</string>

    <!--Toast quiz True/False answ/Submit button-->
    <string name="true_answ">CORRECT, the key is yours!</string>
    <string name="false_answ">Try it again.</string>
    <string name="miss_user_name">Write your name above.</string>

    <!--End of layout-->
    <string name="thanks"><b>THANK YOU</b>, that you went with us to discover these beautiful places in the heart of Europe - magical Prague.</string>
    <string name="submit">submit</string>

    <!--Dialog-->
    <string name="allAttempt">Number of attempt:</string>
    <string name="correctAttempt">Number of correct:</string>
    <string name="correct_no">All answers have to be answered correctly.</string>
    <string name="thanks_dialog"><b>That is AMAZING, you solved a secret cipher!</b></string>
    <string name="dialog_next"><i>Click on OK button if you want to know more. For exit click on CANCEL.</i></string>

    <!--ThanksMessage new activity-->
    <string name="title_activity_thanks_message">thanksMessage</string>
    <string name="bravo">!BRAVO!</string>
    <string name="cipher">the secret cipher is the <b>VLTAVA</b> and that is why our journey finishes right here.</string>
    <string name="cipher2">The <b>VLTAVA</b>, with its length of 430.2 km, is the longest river in the Czech Republic. Can you remember from how many Prague bridges you can admire its beauty? If you like more, you can see Prague from steamboats or you can hire a small boat around Charles Bridge.</string>
    <string name="leave">"See you next time! "</string>
</resources>